Fix spacing after code blocks
The previous fix broke „normal“ code blocks that weren’t part of a <figure>.

Reverts 62ba11be595293afce52eb582478a33f38e00214.

--- a/src/scss/components/code.scss
+++ b/src/scss/components/code.scss
@@ -43,6 +43,7 @@ h6 code,
   font-size: $font-size-code;
   letter-spacing: 0;
   line-height: ($line-height-code / $font-size-code);
+  margin-bottom: 1.5rem;
 
   ::selection {
     background: rgba($color-kirby-blue, .4);
@@ -63,7 +64,7 @@ h6 code,
   /**
    * 1. Override default element spacing.
    */
-  > pre {
+  .code {
     margin-bottom: 0;
   }
 }
